8217707: JNICALL declaration breaks Splash screen functions

Reviewed-by: prr, stuefe